src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__arrays__one_cycle_bcb.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: res
---
SemanticError { message: "Invalid recursive data structure: `B -> C -> B`", range: [SourceRange { range: 129..130 }, SourceRange { range: 240..241 }], err_no: pou__recursive_data_structure }

