src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__arrays__one_cycle_with_multiple_identical_members_aba.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: res
---
SemanticError { message: "Invalid recursive data structure: `A -> B -> A`", range: [SourceRange { range: 18..19 }, SourceRange { range: 197..198 }], err_no: pou__recursive_data_structure }

