src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__arrays__two_cycles_aa_and_aba.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: res
---
SemanticError { message: "Invalid recursive data structure: `A -> A`", range: [SourceRange { range: 18..19 }], err_no: pou__recursive_data_structure }
SemanticError { message: "Invalid recursive data structure: `A -> B -> A`", range: [SourceRange { range: 18..19 }, SourceRange { range: 167..168 }], err_no: pou__recursive_data_structure }

