src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__arrays__two_cycles_with_branch_input.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: "&diagnostics"
---
error: Recursive data structure `F -> G -> H -> I -> F` has infinite size
   ┌─ <internal>:22:28
   │
22 │             FUNCTION_BLOCK F
   │                            ^ Recursive data structure `F -> G -> H -> I -> F` has infinite size
   ·
29 │             TYPE G : STRUCT
   │                  - see also
   ·
33 │             FUNCTION_BLOCK H
   │                            - see also
   ·
39 │             TYPE I : STRUCT
   │                  - see also

error: Recursive data structure `B -> C -> E -> F -> B` has infinite size
   ┌─ <internal>:8:18
   │
 8 │             TYPE B : STRUCT
   │                  ^ Recursive data structure `B -> C -> E -> F -> B` has infinite size
   ·
12 │             FUNCTION_BLOCK C
   │                            - see also
   ·
18 │             TYPE E : STRUCT
   │                  - see also
   ·
22 │             FUNCTION_BLOCK F
   │                            - see also


